<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select"
        android:icon="@drawable/ic_check"
        android:title="@string/select_books"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deselect_all"
        android:title="@string/deselect_all"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_group"
        android:icon="@drawable/ic_group"
        android:title="@string/move_to_bookshelf"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu> 